FS persistency added to the system, I managed to set up the CSV manager which has the responsibility to call some important operations. moreover, all the needed FilesystemDAO have been implemented and fully work during the test .

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>javafx-web</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+
+        <!-- OpenCSV for File System Persistence -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.7.1</version>
+        </dependency>
     </dependencies>
 
     <build>
