--- a/src/main/resources/.properties
+++ b/src/main/resources/.properties
@@ -1,5 +1,5 @@
 persistence_type=FS
-front_end_type=JAVAFX
+front_end_type=CLI
 username=root
 password=rootroot
 url=jdbc:mysql://localhost:3306/ispwtwo
