--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,10 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>17.0.1</javafx.version>
+        <!-- SonarCloud Configuration -->
+        <sonar.organization>danydim03</sonar.organization>
     </properties>
+
 
     <dependencies>
         <!-- FlatLaf -->
