--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
         <javafx.version>17.0.1</javafx.version>
         <!-- SonarCloud Configuration -->
         <sonar.organization>danydim03</sonar.organization>
+        <!-- Exclude java:S106 (replace System.out with logger) from analysis -->
+        <sonar.issue.ignore.multicriteria>e1</sonar.issue.ignore.multicriteria>
+        <sonar.issue.ignore.multicriteria.e1.ruleKey>java:S106</sonar.issue.ignore.multicriteria.e1.ruleKey>
+        <sonar.issue.ignore.multicriteria.e1.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e1.resourceKey>
     </properties>
 
 
