chore: add sonar-maven-plugin for future manual analysis support

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,13 @@
                 </configuration>
             </plugin>
 
+            <!-- SonarQube Maven Plugin -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.10.0.2594</version>
+            </plugin>
+
             <!-- Maven Surefire Plugin for running tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
