--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,12 @@
         <sonar.organization>danydim03</sonar.organization>
         <!-- Exclude java:S106 (replace System.out with logger) from analysis -->
         <!-- sto escludendo la issue perché nella mia 'applicazione desktop l'uso di System.out è accettabile -->
-        <sonar.issue.ignore.multicriteria>e1</sonar.issue.ignore.multicriteria>
+        <!-- Exclude java:S120 (package naming convention) - i package DAO e nomi capitalizzati sono intenzionali -->
+        <sonar.issue.ignore.multicriteria>e1,e2</sonar.issue.ignore.multicriteria>
         <sonar.issue.ignore.multicriteria.e1.ruleKey>java:S106</sonar.issue.ignore.multicriteria.e1.ruleKey>
         <sonar.issue.ignore.multicriteria.e1.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e1.resourceKey>
+        <sonar.issue.ignore.multicriteria.e2.ruleKey>java:S120</sonar.issue.ignore.multicriteria.e2.ruleKey>
+        <sonar.issue.ignore.multicriteria.e2.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e2.resourceKey>
     </properties>
 
 
