chore: ignore java:S1075 (hardcoded URI) in SonarCloud
The resource base path is already externalized to .properties file.
The hardcoded value is only a safe fallback in case properties loading fails.

Added e3 rule exclusion for java:S1075 in pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,14 @@
         <!-- Exclude java:S106 (replace System.out with logger) from analysis -->
         <!-- sto escludendo la issue perché nella mia 'applicazione desktop l'uso di System.out è accettabile -->
         <!-- Exclude java:S120 (package naming convention) - i package DAO e nomi capitalizzati sono intenzionali -->
-        <sonar.issue.ignore.multicriteria>e1,e2</sonar.issue.ignore.multicriteria>
+        <!-- Exclude java:S1075 (hardcoded URI) - il path è esternalizzato in .properties, il default è solo un fallback -->
+        <sonar.issue.ignore.multicriteria>e1,e2,e3</sonar.issue.ignore.multicriteria>
         <sonar.issue.ignore.multicriteria.e1.ruleKey>java:S106</sonar.issue.ignore.multicriteria.e1.ruleKey>
         <sonar.issue.ignore.multicriteria.e1.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e1.resourceKey>
         <sonar.issue.ignore.multicriteria.e2.ruleKey>java:S120</sonar.issue.ignore.multicriteria.e2.ruleKey>
         <sonar.issue.ignore.multicriteria.e2.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e2.resourceKey>
+        <sonar.issue.ignore.multicriteria.e3.ruleKey>java:S1075</sonar.issue.ignore.multicriteria.e3.ruleKey>
+        <sonar.issue.ignore.multicriteria.e3.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e3.resourceKey>
     </properties>
 
 
