fix(css): resolve SonarCloud false positives for JavaFX CSS
1. Removed duplicate .card selector and unsupported -fx-transition properties
2. Excluded CSS files from SonarCloud analysis via sonar.exclusions
   - JavaFX CSS uses -fx-* properties and :focused/:selected/:pressed pseudo-classes
   - Standard CSS analyzers don't recognize JavaFX CSS syntax

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
         <sonar.issue.ignore.multicriteria.e3.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e3.resourceKey>
         <sonar.issue.ignore.multicriteria.e4.ruleKey>java:S107</sonar.issue.ignore.multicriteria.e4.ruleKey>
         <sonar.issue.ignore.multicriteria.e4.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e4.resourceKey>
+        <!-- Exclude CSS files from analysis - JavaFX CSS uses -fx-* properties which SonarCloud doesn't recognize -->
+        <sonar.exclusions>**/*.css</sonar.exclusions>
     </properties>
 
 
